--- a/templates/market.html
+++ b/templates/market.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Flask Market</title>
+    <title>Market Page</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -37,8 +37,8 @@
     </div>
 </nav>
 
-
-<h1>Home Page</h1>
+<h1>Market Page</h1>
+<p>{{item_name}}</p>
 
 <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -59,5 +59,6 @@
         background-color: #212121;
         color: white;
     }
+
 </style>
 </html>
