--- a/templates/market.html
+++ b/templates/market.html
@@ -38,7 +38,31 @@
 </nav>
 
 <h1>Market Page</h1>
-<p>{{item_name}}</p>
+
+<table class="table table-hover table-dark">
+    <thead>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Barcode</th>
+        <th scope="col">Price</th>
+        <th scope="col">Options</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for item in items %}
+    <tr>
+        <td>{{ item.id }}</td>
+        <td>{{ item.name }}</td>
+        <td>{{ item.barcode }}</td>
+        <td>£{{ item.price }}</td>
+        <td>
+            <button class="btn btn-outline btn-info">More Info</button>
+        </td>
+    </tr>
+    {%endfor%}
+    </tbody>
+</table>
 
 <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -59,6 +83,7 @@
         background-color: #212121;
         color: white;
     }
+
 
 </style>
 </html>
