--- a/templates/market.html
+++ b/templates/market.html
@@ -58,6 +58,7 @@
         <td>£{{ item.price }}</td>
         <td>
             <button class="btn btn-outline btn-info">More Info</button>
+            <button class="btn btn-outline btn-success">Purchase This Item</button>
         </td>
     </tr>
     {%endfor%}
