--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}
-Home
+Login
 {% endblock %}
 
 {% block content %}
-This is our content for the Home Page
+This is our content for the Login Page
 {% endblock %}
