--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}
-Home
+Register
 {% endblock %}
 
 {% block content %}
-This is our content for the Home Page
+This is our content for the Register Page
 {% endblock %}
