--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -38,6 +38,22 @@
         </ul>
     </div>
 </nav>
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+{% for category, message in messages %}
+<!-- In routes.py we say category='danger' that way we can use Bootstrap's "danger"
+theme for the alert message class -->
+<div class="alert alert-{{ category }} d-flex justify-content-center">
+    {{ message }}
+    <button type="button" class="m1-2 mb-1 ml-2 close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
+
 {% block content %}
 
 {% endblock %}
@@ -62,6 +78,8 @@
       background-color: #212121;
       color: white
       }
+
+
 
 
 </style>
