--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -28,6 +28,8 @@
                 <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
             </li>
         </ul>
+        <!-- Don't show if logged in -->
+        {% if current_user.is_authenticated %}
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('login_page') }}">Login</a>
@@ -36,6 +38,16 @@
                 <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
             </li>
         </ul>
+        {% else %}
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link">Welcome, {{current_user.username}}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Logout</a>
+            </li>
+        </ul>
+        {% endif %}
     </div>
 </nav>
 
@@ -78,6 +90,8 @@ theme for the alert message class -->
       background-color: #212121;
       color: white
       }
+
+
 
 
 
