--- a/market/templates/includes/items_modals.html
+++ b/market/templates/includes/items_modals.html
@@ -2,7 +2,6 @@
   .modal-content {
     background-color: #212121
   }
-
 </style>
 
 <!-- More Info -->
@@ -18,7 +17,7 @@
                 </h5>
                 <button type="button" class="close"
                         data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span class="text-secondary" aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
@@ -41,16 +40,15 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="ModalLabel">
-                    <!-- -->
                     {{ item.name }}
                 </h5>
                 <button type="button" class="close"
                         data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span class="text-secondary" aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                Are you sure you want to buy {{ item.name }} for {{ item.price }}$ ?
+                Are you sure you want to buy {{ item.name }} for £{{ item.price }}?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary"
